static/countdown.css
#container {
    display: flex;
    flex-direction: column;
    height: 75vh;
    width: auto;
    padding: 1em;
    align-items: center;
    position: relative;
}

.container > * {
    flex: 1 1 auto;
}

#content {
    height: 100vh;
    font-size: 2em;
    text-align: center;
    z-index: -1;
    margin-bottom: 4em;
}

h1 {
    margin-top: 1em;
    font-family: 'Alex Brush', cursive;
    text-shadow: 0 0 24px rgba(0,0,0,0.25);
    color: white;
}

#countdown {
    position: absolute;
    color: #d1f8ff;
    font-size: 16vw;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 1;
    margin: 0;
}

#container img {
    position: absolute;
    width: 30vw;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 2;
    margin: 0;
}

